# chess

./: CMakeLists.txt  README.md  main.cpp
PM/: skizze.txt  todo.txt
src/: CMakeLists.txt  main.cpp
src/board/: CMakeLists.txt  board.cpp  board.hpp  field.cpp  field.hpp
src/control/: CMakeLists.txt  configurationManager.hpp  drawer.cpp  drawer.hpp  informationCenter.cpp  informationCenter.hpp  player.cpp  player.hpp
src/field/: field.cpp  field.hpp
src/figures/: CMakeLists.txt  figures.cpp  figures.hpp
src/gui/: CMakeLists.txt  board.cpp  board.hpp  figures.cpp  splashScreen.cpp  splashScreen.hpp
src/input/: CMakeLists.txt  input.cpp  input.hpp  player.hpp
src/logic/: CMakeLists.txt  referee.cpp  referee.hpp
src/referee/: CMakeLists.txt  referee.cpp  referee.hpp
